src - 27 March/objects/Case_Plan__c.object
<CustomObject>
    <fields>
        <fullName>CaseStatusOrdering__c</fullName>
        <label>Case Status Ordering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <label>Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_SupportProcess__c</fullName>
        <label>Record Type / Support Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CaseStatusOrdering__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>